Fixed position of banner image on mobile

--- a/app/sass/awm.scss
+++ b/app/sass/awm.scss
@@ -157,6 +157,9 @@ footer {
   .ag .carousel .carousel-caption h1 {
     font-size: 24px;
   }
+  .ag-row-mobile-full .carousel .banner-image {
+    background-position: center right;
+  }
 }
 
 // BOOTSTRAP OVERRIDES
